--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="main-nav">
             <h1 class="logo">MEMES </h1>
             <ul class="clean-list main-menu flex">
-                <li><a href="#" onclick="toggleGallery()">Gallery</a></li>
+                <li><a href="#" onclick="viewGallery()">Gallery</a></li>
                 <li><a href="#">About</a></li>
             </ul>
         </nav>
