--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
+    <script defer src="https://kit.fontawesome.com/0d3f998bf1.js" crossorigin="anonymous"></script>
     <title>Meme Generator</title>
 </head>
 
@@ -13,7 +14,7 @@
 
     <header class="main-header full">
         <nav class="main-nav">
-            <h1 class="logo">MEMES </h1>
+            <h1 onclick="viewGallery()" class="logo">MEMES </h1>
             <ul class="clean-list main-menu flex">
                 <li><a href="#" onclick="viewGallery()">Gallery</a></li>
                 <li><a href="#">About</a></li>
@@ -24,16 +25,14 @@
     <section class="main-container">
 
         <!-- CANVAS CONTAINER -->
-        <div class="canvas-container hide" >
-            <!-- canvas -->
+        <div class="canvas-container hide">
+
             <canvas class="my-canvas" id="my-canvas" width="400" height="400"></canvas>
 
-            <!-- editor -->
             <div class="editor-container">
 
-                <!-- update txt meme -->
                 <input oninput="onUpdateMeme('txt', this.value)" name="txt" placeholder="text" class="txt" />
-                
+
                 <form class="txt-inputs-container flex-center space-between">
                     <input oninput="onUpdateMeme('size', this.value)" type="number" value="30" name="font-size"
                         class="font-size" />
@@ -46,18 +45,23 @@
                     </select>
                 </form>
 
-                <!-- lines handling -->
                 <div class="lines-handling flex-center">
-                    <button onclick="onAddLine()">➕</button>
-                    <button onclick="onDeleteLine()">➖</button>
-                    <button onclick="onSwitchBetweenLines()">⬆⬇</button>
+                    <button title="add-line" onclick="onAddLine()"><i class="fa-solid fa-plus"></i></button>
+                    <button title="delete-line" onclick="onDeleteLine()"><i
+                            class="fa-regular fa-trash-can"></i></button>
+                    <button title="switch-lines" onclick="onSwitchBetweenLines()">⬆⬇</button>
                 </div>
 
-                <!-- change alighn center -->
                 <div class="align flex-center">
-                    <button value="right" onclick="onUpdateMeme('align', this.value)">R</button>
-                    <button value="center" onclick="onUpdateMeme('align', this.value)">C</button>
-                    <button value="left" onclick="onUpdateMeme('align', this.value)">L</button>
+                    <button title="align-right" value="right" onclick="onUpdateMeme('align', this.value)">
+                        <i class="fa-solid fa-align-center"></i>
+                    </button>
+                    <button title="align-center" value="center" onclick="onUpdateMeme('align', this.value)">
+                        <i class="fa-solid fa-align-center"></i>
+                    </button>
+                    <button title="align-left" value="left" onclick="onUpdateMeme('align', this.value)">
+                        <i class="fa-solid fa-align-left"></i>
+                    </button>
                 </div>
 
                 <!-- <div class="emojis-container flex-center">
@@ -65,13 +69,12 @@
                     <button>➡</button>
                 </div> -->
 
-                <!-- share and download meme -->
                 <div class="share-download flex-center space-between">
                     <button class="btn" onclick="onUploadImg()">Share </button>
                     <button class="download"><a href="#" onclick="downloadCanvas(this)"
                             download="file-name">Download</a></button>
                 </div>
-                
+
                 <button title="clear-marked" class="finish" onclick="onClearMarked()">finish update</button>
             </div>
         </div>
